# images-of-the-world

./: .babelrc  .env.example  .eslintrc.js  .gitignore  .parcelrc  .prettierrc  .proxyrc.js  LICENSE  README.md  cypress.json  jest.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.test.json  vercel.json
__mocks__/: react-i18next.js  react-toast-notifications.js  svgMock.js
__tests__/: App.spec.tsx  Button.spec.tsx  CurrentUserContext.spec.tsx  Dropdown.spec.tsx  Home.spec.tsx  ImageOfTheWorld.spec.tsx  JourneyContext.spec.tsx  JourneyDisplay.spec.tsx  JourneyReducer.spec.tsx  Navbar.spec.tsx  Picture.spec.tsx  SearchField.spec.tsx  SellersList.spec.tsx  Start.spec.tsx  UserCard.spec.tsx  journeyReducer.spec.tsx  tsconfig.json  useMatchMedia.spec.tsx  useProgressiveImage.spec.tsx
__tests__/setup/: server-handlers.ts  server.ts  setup-env.ts
__tests__/utils/: TestWrapper.tsx  imageHandler.ts  localesHandler.tsx  serverUtils.ts
api/: .env.example  Dockerfile  Procfile  _tests.py  config.py  pyproject.toml  requirements.txt  schema.fql  sellers.py  tests.py
api/core/: config.py  engine.py
api/functions/: __init__.py  journey.py  sellers.py
api/models/: __init__.py  config.py  document_base.py  image_seller.py  journey.py  test_journey.py  user.py  utils.py
api/tests/: __init__.py  conftest.py  test_journey.py  test_models.py  test_sellers.py
cypress/: tsconfig.json
cypress/e2e/: Finish.spec.tsx  Journey.spec.tsx  Start.spec.tsx
cypress/fixtures/: userStart.json
src/: App.tsx  index.html  index.js  index.tsx
src/components/: App.tsx  (+10 more)
(+91 files in other folders)
