[tool.poetry]
name = "api"
version = "0.1.0"
description = "Serverless Functions for Images of the World"
authors = ["Alessandro Cuppari <me@alessandrojcm.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.6"
fastapi = "^0.60.2"
faker = "^4.1.1"
requests = "^2.24.0"
pytest = "^6.0.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
