[tool.poetry]
name = "api"
version = "0.1.0"
description = "Serverless Functions for Images of the World"
authors = ["Alessandro Cuppari <me@alessandrojcm.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.6"
faker = "^4.1.1"
requests = "^2.24.0"
fastapi = "^0.61.0"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
